# Lunabotics-WPI-25

./: .gitignore  .gitmodules  DOCUMENTATION.md  LICENSE  README.md  horror.py
Allan Variance/: allan.py
Arduino/: Arduino.code-workspace
Arduino/Lunabotics/: platformio.ini
Arduino/Lunabotics/src/: ArdyToMot.cpp  ArdyToMot.h  Head.cpp  Talon.cpp  Talon.h  main.cpp  serial_comm.cpp  serial_comm.hpp
BaseTest/FAILED/ControllerToMotor/: Controller.ino  ControllerToMotor.h  ControllerToMotor.ino  InputToController.ino
BaseTest/FAILED/InputToController/: InputToController.ino
BaseTest/WORK/Arduino_code/: gamepad.py  platformio.ini  readme
BaseTest/WORK/Arduino_code/src/: ArdyToMot.cpp  ArdyToMot.h  Head.cpp
Jetson/: gamepad.py
Jetson/RVIS_OpenVINs_package/launch/: RvisAndRealsense_launch.py
Jetson/RVIS_OpenVINs_package/src/: d455_calib_data  realsense_imu_sub.py
Jetson/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  spawn_shell.bash
Jetson/log/: latest_build
Jetson/openvins_testing/: package.xml  setup.cfg  setup.py
Jetson/openvins_testing/launch/: rvis_and_realsense.launch.py
Jetson/openvins_testing/src/: bob.py
Jetson/src/install/: local_setup.sh  setup.sh  setup.zsh  spawn_shell.bash
Jetson/src/log/: latest_build
Jetson/src/openVinsTest/: package.xml  setup.cfg  setup.py
Jetson/src/openVinsTest/launch/: rvis_and_realsense.launch.py
Jetson/src/openVinsTest/openVinsTest/: bob.py
Platformio/src/: main.cpp
Platformio/src/peripheral/: CANController.cpp  ConveyorCANController.h  HBridge.cpp  encoder.h  masterRawEncoder.cpp  masterRawEncoder.h  medianFilter.cpp  rawEncoder.h
Platformio/src/subsystems/: conveyor.h  deposit.h  drivetrain.cpp  localizer.cpp  localizer.h
gzSim/tutorial/: building_robot.sdf
last_years_code/Platformio/: platformio.ini
last_years_code/Platformio/src/: main.cpp  robotMap.h
last_years_code/Platformio/src/peripheral/: CANController.h  ConveyorCANController.cpp  HBridge.h  encoder.cpp  medianFilter.h  rawEncoder.cpp  talon.cpp  talon.h
last_years_code/Platformio/src/subsystems/: conveyor.cpp  deposit.cpp  drivetrain.h
last_years_code/luna_ws/install/: _setup_util.py  local_setup.sh  setup.sh
last_years_code/luna_ws/src/control_package/: package.xml
last_years_code/luna_ws/src/localization_package/: CMakeLists.txt  package.xml
last_years_code/luna_ws/src/mapping_package/: package.xml
last_years_code/luna_ws/src/robot_package/: CMakeLists.txt
luna_ws/install/: .rosinstall
luna_ws/src/control_package/: CMakeLists.txt
luna_ws/src/control_package/launch/: keyboard.launch
luna_ws/src/control_package/src/: digger_control.py  e_stop.py
luna_ws/src/depth_imaging_package/: CMakeLists.txt  package.xml
luna_ws/src/depth_imaging_package/launch/: depth_cam.launch
luna_ws/src/depth_imaging_package/src/: depth_publisher.py
luna_ws/src/localization_package/launch/: webcam.launch
luna_ws/src/localization_package/scripts/: get_images.py  pose_listener.py
luna_ws/src/luna_rviz/: CMakeLists.txt  package.xml
luna_ws/src/mapping_package/: CMakeLists.txt
luna_ws/src/navigator_package/: CMakeLists.txt  package.xml
luna_ws/src/navigator_package/src/: path_follower.py  pathfinder.py
luna_ws/src/robot_package/: package.xml
luna_ws/src/robot_package/launch/: robot.launch  serial_node.launch
luna_ws/src/robot_package/src/: arduino_watchdog.py
luna_ws/src/robot_sim_package/: CMakeLists.txt  package.xml
ros2_ws/src/luna_control/: CMakeLists.txt  luna_plugin.xml  package.xml
ros2_ws/src/luna_control/include/luna_control/: LunaController.hpp  odometry.hpp  speed_limiter.hpp
ros2_ws/src/luna_control/src/: LunaController.cpp  luna_controller_parameter.yaml  odometry.cpp  speed_limiter.cpp
ros2_ws/src/luna_gz/: CMakeLists.txt  package.xml
ros2_ws/src/luna_gz/worlds/: boxes.sdf
ros2_ws/src/luna_urdf/: CMakeLists.txt  package.xml
ros2_ws/src/luna_urdf/luna_control/: control.urdf  controllers.yaml
ros2_ws/src/luna_urdf/luna_sdf/: body.part  config.json  robot.sdf  wheel.part  wheelpod.part  wheelpod.stl
ros2_ws/src/luna_urdf/luna_urdf/: body.part  body.stl  config.json  controllers.yaml  robot.sdf  robot.urdf  wheel.part  wheelpod.part
ros2_ws/src/lunabot_2425/: CMakeLists.txt  package.xml
ros2_ws/src/lunabot_2425/config/: gz_bridge.config.yaml  robot_controllers.yaml
ros2_ws/src/lunabot_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/lunabotdemo/: package.xml  setup.cfg  setup.py
ros2_ws/src/mini_urdf/: CMakeLists.txt  package.xml
ros2_ws/src/mini_urdf/launch/: mini_urdf.launch  mini_urdf.launch.py  mini_urdf.rviz
ros2_ws/src/mini_urdf/meshes/: Part_1_1.stl  Part_1_2.stl  Part_1_3.stl  Part_1_4.stl  Part_1_4_collision.stl  body_1.stl  wheelpod_2.stl  wheelpod_3.stl  wheelpod_4.stl  wheelpod_5.stl
ros2_ws/src/mini_urdf/urdf/: mini_urdf.urdf
ros2_ws/src/urdf_lunabot/: package.xml  setup.cfg  setup.py
(+84 files in other folders)
