<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<package format="2">
    <name>mini_urdf</name>
    <version>0.0.0</version>
    <description>Articulated, "mini" version of the Lunabotics rover URDF for simulation use.</description>
    <maintainer email="srooney@wpi.edu">Samuel Rooney</maintainer>
    <license>Not Applicable</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>rviz</exec_depend>
    <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
